# pynsd

./: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  docker-compose.integration.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
docker/nsd/: Dockerfile  entrypoint.sh
src/: demo.py
src/etc/: pynsd-rpcd.cfg
src/pynsd/: __init__.py  client.py  core.py  exception.py  model.py  parser.py  rpc.py
tests/: test_client.py  test_integration.py  test_parser.py
tests/integration/: nsd.conf
tests/integration/zones/static/: example.com.zone
