[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pynsd"
description = "Library to connect and call command against new NSD >=4 control api."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "greenSec GmbH", email = "meinecke@greensec.de" }
]
license = "Apache-2.0"
keywords = ["nsd", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/greensec/pynsd"
Documentation = "https://github.com/greensec/pynsd#readme"
Changelog = "https://github.com/greensec/pynsd/releases"
Issues = "https://github.com/greensec/pynsd/issues"
Source = "https://github.com/greensec/pynsd"

[tool.setuptools]
package-dir = { "" = ".", "pynsd" = "src/pynsd" }
packages = ["pynsd"]
zip-safe = false

[tool.setuptools.dynamic]
version = {file = ["src/pynsd/VERSION"]}


[dependency-groups]
dev = [
    "pyright>=0.0.13.post0",
    "pytest>=7.0.1",
    "ruff>=0.0.17",
    "vulture>=2.8",
    "xenon>=0.9.3",
]


[tool.ruff]
exclude = ["docs", "tests"]
line-length = 160
indent-width = 4  # Same as autopep8 default

[tool.ruff.format]
quote-style = "double"  # Or "single" if you prefer
indent-style = "space"  # Use spaces instead of tabs
line-ending = "lf"  # Keep consistency
preview = true

[tool.ruff.lint]
select = ["E9", "F82"]  # Syntax errors + docstrings
ignore = ["F821"]  # Ignore specific docstring rules

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["."]

[tool.pyright]
exclude = ["**/__pycache__", "**/node_modules", "**/dist", "**/build", "**/venv", "**/.venv", "**/docs"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "docs"]

[tool.vulture]
exclude = ["dist", "build", "venv", ".venv", "tests", "docs" ]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
# make_whitelist = true
min_confidence = 80
paths = ["."]
sort_by_size = true
